tools/tests/errors/surf_name_06.ki
# name resolution: undefined name inside an f-string expression
var word = "world"
discard f"hello {wrod}"
